# task_manager

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
task_manager/: settings.py  urls.py
tasks/: models.py  serializers.py  views.py
tasks/migrations/: 0001_initial.py
